correcao de link forum

--- a/src/app/components/body-home/body-home.component.html
+++ b/src/app/components/body-home/body-home.component.html
@@ -12,8 +12,7 @@
     </button>
     </form>
 
-    <form method="get" action="https://jurisconsult.tjma.jus.br/#/home
-    ">
+    <form method="get" action="https://jurisconsult.tjma.jus.br/#/home">
         <button>
         <div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
@@ -39,7 +38,7 @@
     </button>
     </form>
 
-    <form method="get" action=" http://www.tjma.jus.br/primeiro-grau/cgj/comarcas">
+    <form method="get" action="http://www.tjma.jus.br/primeiro-grau/cgj/comarcas">
         <button>
         <div>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
