--- a/src/app/components/body-home/body-home.component.scss
+++ b/src/app/components/body-home/body-home.component.scss
@@ -39,3 +39,10 @@ form {
     justify-content: center;
     display: flex;
 }
+
+#telejudiciario {
+    width: 39%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
