--- a/src/app/paginas/home/home.component.html
+++ b/src/app/paginas/home/home.component.html
@@ -1,4 +1,6 @@
-<app-header-home>
-</app-header-home>
-<app-body-home>
-</app-body-home>
+<section>
+    <app-header-home>
+    </app-header-home>
+    <app-body-home>
+    </app-body-home>
+</section>
