estilizacao do botao do whatsapp

--- a/src/app/components/inicio/inicio.component.scss
+++ b/src/app/components/inicio/inicio.component.scss
@@ -20,7 +20,7 @@ section {
 svg {
     width: 32px;
     height: 32px;
-    padding: 5px;
+    margin-top: 10px;
 }
 
 #whatsapp {
@@ -32,10 +32,14 @@ svg {
 
 a {
     width: 15%;
+    height: 65px;
     align-items: center;
     justify-content: center;
     display: flex;
     background-color: #00a884;
     margin: 25px;
     border-radius: 25px;
+    text-decoration: none;
+    color: black;
+    flex-direction: column;
 }
